# factorise

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  cleanup.sh  justfile  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  bench_memory.py  bench_timing.py  concurrency.py  inputs.py  memory.py  stress.py  stress_test.py  timing.py
docs/: README.md  ecm.md  gnfs.md  index.md  miller_rabin.md  pollard_pm1.md  pollards_rho.md  pollards_rho_brent.md  quadratic_sieve.md  references.md  siqs.md  trial_division.md
factorise/: __init__.py  _utils.py  cli.py  config.py  core.py  hybrid.py  pipeline.py
factorise/stages/: __init__.py  _ecm_shared.py  _qs_shared.py  ecm.py  ecm_shared.py  ecm_two_pass.py  gnfs.py  gnfs_optimized.py  improved_pm1.py  pollard_rho.py  qs_shared.py  quadratic_sieve.py  siqs.py  trial_division.py
scratch/: find_primes.py
source/: __init__.py  cli.py  config.py  core.py  hybrid.py  pipeline.py
source/stages/: _ecm_shared.py  _qs_shared.py  ecm.py  ecm_two_pass.py  gnfs.py  improved_pm1.py  pollard_rho.py  quadratic_sieve.py  siqs.py  trial_division.py
src/factorise/: __init__.py  cli.py  core.py  py.typed
tests/: conftest.py  test_cli.py  test_cli_errors.py  test_concurrency_processes.py  test_concurrency_threads.py  test_config_extended.py  test_core.py  test_core_concurrency.py  test_core_config.py  test_core_edge_cases.py  test_core_edge_cases2.py  test_core_factorisation.py  test_core_pollard.py  test_core_primality.py  test_correctness_deep.py  test_coverage_edge_cases.py  test_coverage_gap.py  test_coverage_gaps.py  test_ecm_shared.py  test_hybrid.py  test_pipeline.py  test_properties.py  test_result_model.py  test_stages.py
